test/compile_fail/root_ordinary_removed.zig
comptime {
    const shift = @import("shift");
    _ = shift.ordinary;
}
